# SynapseDB

app/: ADVANCED_SQL_GENERATOR.md  FIXES.md  IMPLEMENTATION.md  PIPELINE_QUICK_START.md  QUERY_PIPELINE.md  QUERY_SPLIT_SUMMARY.md  README.md  TROUBLESHOOTING.md  migrate-vector.sql  package-lock.json  package.json  setup-database.sql  setup.ps1  test-upload.txt
app/__tests__/: query-pipeline.test.ts
app/app/: layout.tsx  page.tsx
app/app/api/advanced-nl-sql/: route.ts
app/app/api/check-schema/: route.ts
app/app/api/db/: route.ts
app/app/db/: page.tsx
app/app/help/: page.tsx
app/app/hybrid/: page.tsx
app/app/ingestion/: page.tsx
app/app/query/: page.tsx
app/app/query-executor/: page.tsx
app/app/query-generator/: page.tsx
app/app/query-interface/: page.tsx
app/app/query-pipeline/: page.tsx
app/app/smart-query/: page.tsx
app/app/upload/: page.tsx
app/app/upload-enhanced/: page.tsx
app/components/: navbar.tsx
app/components/ui/: badge.tsx  card.tsx  input.tsx  progress.tsx
app/lib/: document-utils.ts  embeddings.ts  gemini.ts  nl-sql.ts  query-cache.ts  query-optimizer.ts  query-security.ts  sql-utils.ts
app/prisma/: schema.prisma
app/types/: third-party.d.ts
backend/: .env  app.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/lib/: db.py
backend/app/routes/: metrics.py  query.py  upload.py
backend/app/utils/: extractor.py  llm_client.py
backend/templates/: index.html
backend/uploads/: Employee Name.docx  Employee_Name.docx  csv_test.csv  john.txt  sql.txt  test_nlp.txt  text_test.txt
(+13 files in other folders)
